fixed transforms on iPhones and such, video thingy fixes

--- a/app/scss/_appstyles.scss
+++ b/app/scss/_appstyles.scss
@@ -3,6 +3,8 @@
 body, html {
 	height: 100%;
 	overflow: hidden;
+	user-select: none;
+	-webkit-user-select: none;
 }
 
 body {
